fix the bugs on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -13,9 +13,9 @@ nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
 }
-.span14 {
+/* .span14 {
     width: 1020px;
-}
+} */
 
 /* .container{
     width=970px;
